Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-133221

[REG: 6.7->6.8] SVG file mime type not recognized if the file contains xml header

XMLWordPrintable

    • 25df8042a (dev), 3e0bcaeea (6.10), 4e482b055 (6.9), 61dd64638 (tqtc/lts-6.8)
    • Foundation Sprint 131

      If the built-in Tika database is used, it says SVG files are are just xml files if the data contains <?xml version="1.0"?> header. They are now detected as application/xml instead of image/svg+xml like freedesktop does.

      Because of that difference, trying to load SVG data as icons ends up using QPixmapIconEngine engine now which does not render them in high resolution for high DPI displays.

        1. qtbug133221.tar.gz
          0.8 kB
          Joni Poikelin
        For Gerrit Dashboard: QTBUG-133221
        # Subject Branch Project Status CR V

            matthias_rauter Matthias Rauter
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes